# docs/openapi.json
@@ -927,19 +927,7 @@
               "type": "string"
             }
           }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {},
-                "additionalProperties": true
-              }
-            }
-          }
-        }
+        ]
       }
     },
     "/api/auth/skill-credentials/{id}/complete": {
@@ -4109,42 +4097,6 @@
                 "providers",
                 "custom_providers"
               ]
-            }
-          }
-        ]
-      }
-    },
-    "/api/hermes/credentials/replay/{runId}": {
-      "post": {
-        "tags": [
-          "Auth"
-        ],
-        "summary": "Create :runId",
-        "description": "POST /api/hermes/credentials/replay/:runId",
-        "operationId": "credentialReplay",
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          },
-          "400": {
-            "$ref": "#/components/responses/BadRequest"
-          },
-          "401": {
-            "$ref": "#/components/responses/Unauthorized"
-          }
-        },
-        "parameters": [
-          {
-            "name": "runId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
             }
           }
         ]
